Добаылена страничка Log

--- a/pg_sync.conf
+++ b/pg_sync.conf
@@ -2,5 +2,5 @@
 web_port = 8032
 
 [db]
-master =  host=127.0.0.1 dbname=vpbx user= password=
-slave = host=127.0.0.1 dbname=vpbx_1 user= password=
+master =  host=127.0.0.1 dbname=vpbx user=kkrotov password=
+slave = host=127.0.0.1 dbname=vpbx_1 user=kkrotov password=
